--- a/Bonus 1/Bonus1.ipynb
+++ b/Bonus 1/Bonus1.ipynb
@@ -1514,6 +1514,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Der Random Forest konnte eine Präzision von rund 0,83 erreicht werden."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -1546,6 +1553,13 @@
    "source": [
     "stack.fit(X_train_all,y_train_all)\n",
     "stack.score(X_test_all,y_test_all)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mit dem StackingCVRegressor konnte hingegen auf den Testdaten eine PRäzision von 0,84 beobachtet werden"
    ]
   }
  ],
