--- a/Bonus/Bonus 3/Bonus3.ipynb
+++ b/Bonus/Bonus 3/Bonus3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,11 +16,35 @@
     "from tqdm import tqdm\n",
     "import ast\n",
     "import torch\n",
+    "import torch.optim as optim\n",
+    "import torch.nn.functional as F\n",
+    "from torch import nn\n",
+    "from torch.autograd import Variable\n",
     "import torchvision\n",
     "from torchvision import transforms\n",
     "from PIL import Image\n",
     "\n",
     "from os import listdir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.is_available()"
    ]
   },
   {
@@ -641,31 +665,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15474/15474 [02:10<00:00, 118.71it/s]\n"
+      "100%|██████████| 15474/15474 [01:22<00:00, 187.42it/s]\n"
      ]
     }
    ],
    "source": [
     "train_pics_list = []\n",
     "train_data = []\n",
-    "labels = []\n",
+    "prices = []\n",
     "for file in tqdm(listdir(pics_path)):\n",
     "    img = Image.open(pics_path + file)\n",
     "    img_tensor = transform(img)\n",
     "    #img_tensor = img_tensor.unsqueeze(0)\n",
     "\n",
     "    train_pics_list.append(img_tensor)\n",
-    "    labels.append(file[:-4])\n",
+    "    img_id = file[:-4]\n",
+    "    price = int(data[data[\"image_id\"] == int(img_id)][\"price\"])\n",
+    "    prices.append(price)\n",
     "\n",
     "    if len(train_pics_list) >= 64:\n",
-    "        train_data.append(((torch.stack(train_pics_list)), labels))\n",
+    "        train_data.append(((torch.stack(train_pics_list)), prices))\n",
     "        labels = []\n",
     "        train_pics_list = []\n",
     "#print(train_data.shape)"
@@ -673,123 +699,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>image_id</th>\n",
-       "      <th>street</th>\n",
-       "      <th>citi</th>\n",
-       "      <th>n_citi</th>\n",
-       "      <th>bed</th>\n",
-       "      <th>bath</th>\n",
-       "      <th>sqft</th>\n",
-       "      <th>price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1317 Van Buren Avenue</td>\n",
-       "      <td>Salton City, CA</td>\n",
-       "      <td>317</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1560</td>\n",
-       "      <td>201900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>124 C Street W</td>\n",
-       "      <td>Brawley, CA</td>\n",
-       "      <td>48</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>713</td>\n",
-       "      <td>228500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2304 Clark Road</td>\n",
-       "      <td>Imperial, CA</td>\n",
-       "      <td>152</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>800</td>\n",
-       "      <td>273950</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>755 Brawley Avenue</td>\n",
-       "      <td>Brawley, CA</td>\n",
-       "      <td>48</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1082</td>\n",
-       "      <td>350000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2207 R Carrillo Court</td>\n",
-       "      <td>Calexico, CA</td>\n",
-       "      <td>55</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2547</td>\n",
-       "      <td>385100</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   image_id                 street             citi  n_citi  bed  bath  sqft  \\\n",
-       "0         0  1317 Van Buren Avenue  Salton City, CA     317    3   2.0  1560   \n",
-       "1         1         124 C Street W      Brawley, CA      48    3   2.0   713   \n",
-       "2         2        2304 Clark Road     Imperial, CA     152    3   1.0   800   \n",
-       "3         3     755 Brawley Avenue      Brawley, CA      48    3   1.0  1082   \n",
-       "4         4  2207 R Carrillo Court     Calexico, CA      55    4   3.0  2547   \n",
-       "\n",
-       "    price  \n",
-       "0  201900  \n",
-       "1  228500  \n",
-       "2  273950  \n",
-       "3  350000  \n",
-       "4  385100  "
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AssertionError",
+     "evalue": "Torch not compiled with CUDA enabled",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\nikla\\workspace\\Machine Learning DHBW\\Bonusaufgabe 2\\Advance-Machine-Learning\\Bonus\\Bonus 3\\Bonus3.ipynb Zelle 22\u001b[0m in \u001b[0;36m<cell line: 25>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nikla/workspace/Machine%20Learning%20DHBW/Bonusaufgabe%202/Advance-Machine-Learning/Bonus/Bonus%203/Bonus3.ipynb#X46sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m         exit()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nikla/workspace/Machine%20Learning%20DHBW/Bonusaufgabe%202/Advance-Machine-Learning/Bonus/Bonus%203/Bonus3.ipynb#X46sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m model \u001b[39m=\u001b[39m Netz()\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/nikla/workspace/Machine%20Learning%20DHBW/Bonusaufgabe%202/Advance-Machine-Learning/Bonus/Bonus%203/Bonus3.ipynb#X46sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m model\u001b[39m.\u001b[39;49mcuda()\n",
+      "File \u001b[1;32mc:\\Users\\nikla\\anaconda3\\envs\\NLP\\lib\\site-packages\\torch\\nn\\modules\\module.py:689\u001b[0m, in \u001b[0;36mModule.cuda\u001b[1;34m(self, device)\u001b[0m\n\u001b[0;32m    672\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcuda\u001b[39m(\u001b[39mself\u001b[39m: T, device: Optional[Union[\u001b[39mint\u001b[39m, device]] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m T:\n\u001b[0;32m    673\u001b[0m     \u001b[39mr\u001b[39m\u001b[39m\"\"\"Moves all model parameters and buffers to the GPU.\u001b[39;00m\n\u001b[0;32m    674\u001b[0m \n\u001b[0;32m    675\u001b[0m \u001b[39m    This also makes associated parameters and buffers different objects. So\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    687\u001b[0m \u001b[39m        Module: self\u001b[39;00m\n\u001b[0;32m    688\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 689\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_apply(\u001b[39mlambda\u001b[39;49;00m t: t\u001b[39m.\u001b[39;49mcuda(device))\n",
+      "File \u001b[1;32mc:\\Users\\nikla\\anaconda3\\envs\\NLP\\lib\\site-packages\\torch\\nn\\modules\\module.py:579\u001b[0m, in \u001b[0;36mModule._apply\u001b[1;34m(self, fn)\u001b[0m\n\u001b[0;32m    577\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_apply\u001b[39m(\u001b[39mself\u001b[39m, fn):\n\u001b[0;32m    578\u001b[0m     \u001b[39mfor\u001b[39;00m module \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mchildren():\n\u001b[1;32m--> 579\u001b[0m         module\u001b[39m.\u001b[39;49m_apply(fn)\n\u001b[0;32m    581\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39mcompute_should_use_set_data\u001b[39m(tensor, tensor_applied):\n\u001b[0;32m    582\u001b[0m         \u001b[39mif\u001b[39;00m torch\u001b[39m.\u001b[39m_has_compatible_shallow_copy_type(tensor, tensor_applied):\n\u001b[0;32m    583\u001b[0m             \u001b[39m# If the new tensor has compatible tensor type as the existing tensor,\u001b[39;00m\n\u001b[0;32m    584\u001b[0m             \u001b[39m# the current behavior is to change the tensor in-place using `.data =`,\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    589\u001b[0m             \u001b[39m# global flag to let the user control whether they want the future\u001b[39;00m\n\u001b[0;32m    590\u001b[0m             \u001b[39m# behavior of overwriting the existing tensor or not.\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\nikla\\anaconda3\\envs\\NLP\\lib\\site-packages\\torch\\nn\\modules\\module.py:602\u001b[0m, in \u001b[0;36mModule._apply\u001b[1;34m(self, fn)\u001b[0m\n\u001b[0;32m    598\u001b[0m \u001b[39m# Tensors stored in modules are graph leaves, and we don't want to\u001b[39;00m\n\u001b[0;32m    599\u001b[0m \u001b[39m# track autograd history of `param_applied`, so we have to use\u001b[39;00m\n\u001b[0;32m    600\u001b[0m \u001b[39m# `with torch.no_grad():`\u001b[39;00m\n\u001b[0;32m    601\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mno_grad():\n\u001b[1;32m--> 602\u001b[0m     param_applied \u001b[39m=\u001b[39m fn(param)\n\u001b[0;32m    603\u001b[0m should_use_set_data \u001b[39m=\u001b[39m compute_should_use_set_data(param, param_applied)\n\u001b[0;32m    604\u001b[0m \u001b[39mif\u001b[39;00m should_use_set_data:\n",
+      "File \u001b[1;32mc:\\Users\\nikla\\anaconda3\\envs\\NLP\\lib\\site-packages\\torch\\nn\\modules\\module.py:689\u001b[0m, in \u001b[0;36mModule.cuda.<locals>.<lambda>\u001b[1;34m(t)\u001b[0m\n\u001b[0;32m    672\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcuda\u001b[39m(\u001b[39mself\u001b[39m: T, device: Optional[Union[\u001b[39mint\u001b[39m, device]] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m T:\n\u001b[0;32m    673\u001b[0m     \u001b[39mr\u001b[39m\u001b[39m\"\"\"Moves all model parameters and buffers to the GPU.\u001b[39;00m\n\u001b[0;32m    674\u001b[0m \n\u001b[0;32m    675\u001b[0m \u001b[39m    This also makes associated parameters and buffers different objects. So\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    687\u001b[0m \u001b[39m        Module: self\u001b[39;00m\n\u001b[0;32m    688\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 689\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_apply(\u001b[39mlambda\u001b[39;00m t: t\u001b[39m.\u001b[39;49mcuda(device))\n",
+      "File \u001b[1;32mc:\\Users\\nikla\\anaconda3\\envs\\NLP\\lib\\site-packages\\torch\\cuda\\__init__.py:211\u001b[0m, in \u001b[0;36m_lazy_init\u001b[1;34m()\u001b[0m\n\u001b[0;32m    207\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\n\u001b[0;32m    208\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mCannot re-initialize CUDA in forked subprocess. To use CUDA with \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    209\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mmultiprocessing, you must use the \u001b[39m\u001b[39m'\u001b[39m\u001b[39mspawn\u001b[39m\u001b[39m'\u001b[39m\u001b[39m start method\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    210\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mhasattr\u001b[39m(torch\u001b[39m.\u001b[39m_C, \u001b[39m'\u001b[39m\u001b[39m_cuda_getDeviceCount\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[1;32m--> 211\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAssertionError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mTorch not compiled with CUDA enabled\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    212\u001b[0m \u001b[39mif\u001b[39;00m _cudart \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    213\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAssertionError\u001b[39;00m(\n\u001b[0;32m    214\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mlibcudart functions unavailable. It looks like you have a broken build?\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mAssertionError\u001b[0m: Torch not compiled with CUDA enabled"
+     ]
     }
    ],
    "source": [
-    "data.head()"
+    "class Netz(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Netz, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(3, 10, kernel_size=4)\n",
+    "        self.conv2 = nn.Conv2d(10, 20, kernel_size=4)\n",
+    "        self.conv3 = nn.Conv2d(20, 30, kernel_size=4)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = self.conv1(x)\n",
+    "        x = F.max_pool2d(x, 2)\n",
+    "        x = F.relu(x)\n",
+    "\n",
+    "        x = self.conv2(x)\n",
+    "        x = F.max_pool2d(x, 2)\n",
+    "        x = F.relu(x)\n",
+    "\n",
+    "        x = self.conv3(x)\n",
+    "        x = F.max_pool2d(x, 2)\n",
+    "        x = F.relu(x)\n",
+    "        \n",
+    "        print(x.size())\n",
+    "        exit()\n",
+    "\n",
+    "model = Netz()\n",
+    "model.cuda()"
    ]
   },
   {
@@ -797,7 +752,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "optimizer = optim.Adam(model.parameters(), lr=0.01)\n",
+    "def train(epoch):\n",
+    "    model.train()\n",
+    "    batch_id = 0\n",
+    "    for data, price in train_data:\n",
+    "        data = data.cuda()\n",
+    "        price = torch.Tensor(prices).cuda()\n",
+    "        optimizer.zero_grad()\n",
+    "        out = model(data)\n",
+    "        criterion = F.mse_loss\n",
+    "        loss = criterion(out, price)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        print(\"Train Epoch: {} [{}/{} ({:,0f}%)]\\tLoss: {:.6f}\".format(epoch, batch_id*len(data), len(train_data), 100. * batch_id / len(train_data, loss.data[0])))\n",
+    "\n",
+    "        batch_id += 1\n",
+    "\n",
+    "for epoch in range(1, 30):\n",
+    "    train(epoch)\n"
+   ]
   }
  ],
  "metadata": {
