--- a/Bonus/2_Bonusaufgabe_Neifeld_Medved.ipynb
+++ b/Bonus/2_Bonusaufgabe_Neifeld_Medved.ipynb
@@ -1047,7 +1047,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit",
+   "display_name": "NLP",
    "language": "python",
    "name": "python3"
   },
@@ -1061,11 +1061,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ba67b957603c6589b793cbc779fadd4d74491f4ed475d4948a7778f403f5ead2"
+    "hash": "cde137ca4d604021dfeee5cc69f15444c7734737e8b71c16850c523803c8f980"
    }
   }
  },
