--- a/Bonus/Bonus 5/bonus5 (1).ipynb
+++ b/Bonus/Bonus 5/bonus5 (1).ipynb
@@ -362,10 +362,10 @@
     "\n",
     "        for phase in ['train', 'valid']:\n",
     "            if phase == 'train':\n",
-    "                model.train(True)  # Set trainind mode = true\n",
+    "                model.train(True)\n",
     "                dataloader = train_dl\n",
     "            else:\n",
-    "                model.train(False)  # Set model to evaluate mode\n",
+    "                model.train(False) \n",
     "                dataloader = valid_dl\n",
     "\n",
     "            running_loss = 0.0\n",
@@ -373,40 +373,30 @@
     "\n",
     "            step = 0\n",
     "\n",
-    "            # iterate over data\n",
     "            for x, y in dataloader:\n",
     "                x = x.cuda()\n",
     "                y = y.cuda()\n",
     "                step += 1\n",
-    "\n",
-    "                # forward pass\n",
     "                if phase == 'train':\n",
-    "                    # zero the gradients\n",
     "                    optimizer.zero_grad()\n",
     "                    outputs = model(x)\n",
     "                    loss = loss_fn(outputs, y)\n",
-    "\n",
-    "                    # the backward pass frees the graph memory, so there is no \n",
-    "                    # need for torch.no_grad in this training pass\n",
     "                    loss.backward()\n",
     "                    optimizer.step()\n",
-    "                    # scheduler.step()\n",
+    "\n",
     "\n",
     "                else:\n",
     "                    with torch.no_grad():\n",
     "                        outputs = model(x)\n",
     "                        loss = loss_fn(outputs, y.long())\n",
     "\n",
-    "                # stats - whatever is the phase\n",
     "                acc = acc_fn(outputs, y)\n",
     "\n",
     "                running_acc  += acc*dataloader.batch_size\n",
     "                running_loss += loss.detach()*dataloader.batch_size\n",
     "\n",
     "                if step % 100 == 0:\n",
-    "                    # clear_output(wait=True)\n",
     "                    print('Current step: {}  Loss: {}  Acc: {}  AllocMem (Mb): {}'.format(step, loss, acc, torch.cuda.memory_allocated()/1024/1024))\n",
-    "                    # print(torch.cuda.memory_summary())\n",
     "\n",
     "            epoch_loss = running_loss / len(dataloader.dataset)\n",
     "            epoch_acc = running_acc / len(dataloader.dataset)\n",
