--- a/Bonus/Bonus 5/bonus5 (1).ipynb
+++ b/Bonus/Bonus 5/bonus5 (1).ipynb
@@ -11,7 +11,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\nikla\\anaconda3\\envs\\tf-gpu\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import matplotlib.pyplot as plt\n",
@@ -61,8 +70,6 @@
     "class CloudDataset(Dataset):\n",
     "    def __init__(self, r_dir, g_dir, b_dir, nir_dir, gt_dir, pytorch=True):\n",
     "        super().__init__()\n",
-    "        \n",
-    "        # Loop through the files in red folder and combine, into a dictionary, the other bands\n",
     "        self.files = [self.combine_files(f, g_dir, b_dir, nir_dir, gt_dir) for f in r_dir.iterdir() if not f.is_dir()]\n",
     "        self.pytorch = pytorch\n",
     "        \n",
@@ -93,8 +100,7 @@
     "    \n",
     "        if invert:\n",
     "            raw_rgb = raw_rgb.transpose((2,0,1))\n",
-    "    \n",
-    "        # normalize\n",
+    "            \n",
     "        return (raw_rgb / np.iinfo(raw_rgb.dtype).max)\n",
     "    \n",
     "\n",
@@ -119,34 +125,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "device name NVIDIA GeForce RTX 3060 Ti\n"
-     ]
-    }
-   ],
-   "source": [
-    "import torch\n",
-    "\n",
-    "if not torch.cuda.is_available():\n",
-    "  raise Exception(\"GPU not availalbe. CPU training will be too slow.\")\n",
-    "\n",
-    "print(\"device name\", torch.cuda.get_device_name(0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
        "8400"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,37 +147,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(torch.Size([4, 384, 384]), torch.Size([384, 384]))"
+       "<matplotlib.image.AxesImage at 0x2724d8f7fd0>"
       ]
      },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x, y = data[1000]\n",
-    "x.shape, y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1bd5096ad00>"
-      ]
-     },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -218,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,23 +259,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "unet = UNET(4,2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# if torch.backends.mps.is_available():\n",
-    "#     mps_device = torch.device(\"mps\")\n",
-    "#     unet.to(mps_device)\n",
-    "#     print('MPS')"
    ]
   },
   {
@@ -501,6 +452,185 @@
    "source": [
     "torch.save(unet, 'net/unet_50_epoch.pt')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UNET(\n",
+       "  (conv1): Sequential(\n",
+       "    (0): Conv2d(4, 32, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
+       "    (1): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (2): ReLU()\n",
+       "    (3): Conv2d(32, 32, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3))\n",
+       "    (4): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (5): ReLU()\n",
+       "    (6): MaxPool2d(kernel_size=3, stride=2, padding=1, dilation=1, ceil_mode=False)\n",
+       "  )\n",
+       "  (conv2): Sequential(\n",
+       "    (0): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (2): ReLU()\n",
+       "    (3): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (4): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (5): ReLU()\n",
+       "    (6): MaxPool2d(kernel_size=3, stride=2, padding=1, dilation=1, ceil_mode=False)\n",
+       "  )\n",
+       "  (conv3): Sequential(\n",
+       "    (0): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (2): ReLU()\n",
+       "    (3): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (4): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (5): ReLU()\n",
+       "    (6): MaxPool2d(kernel_size=3, stride=2, padding=1, dilation=1, ceil_mode=False)\n",
+       "  )\n",
+       "  (upconv3): Sequential(\n",
+       "    (0): Conv2d(128, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (2): ReLU()\n",
+       "    (3): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (4): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (5): ReLU()\n",
+       "    (6): ConvTranspose2d(64, 64, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), output_padding=(1, 1))\n",
+       "  )\n",
+       "  (upconv2): Sequential(\n",
+       "    (0): Conv2d(128, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (1): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (2): ReLU()\n",
+       "    (3): Conv2d(32, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (4): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (5): ReLU()\n",
+       "    (6): ConvTranspose2d(32, 32, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), output_padding=(1, 1))\n",
+       "  )\n",
+       "  (upconv1): Sequential(\n",
+       "    (0): Conv2d(64, 2, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (1): BatchNorm2d(2, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (2): ReLU()\n",
+       "    (3): Conv2d(2, 2, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (4): BatchNorm2d(2, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (5): ReLU()\n",
+       "    (6): ConvTranspose2d(2, 2, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), output_padding=(1, 1))\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = torch.load(\"net/unet_50_epoch.pt\")\n",
+    "model.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CloudDatasetTest(Dataset):\n",
+    "    def __init__(self, r_dir, g_dir, b_dir, nir_dir, pytorch=True):\n",
+    "        super().__init__()\n",
+    "        self.files = [self.combine_files(f, g_dir, b_dir, nir_dir) for f in r_dir.iterdir() if not f.is_dir()]\n",
+    "        self.pytorch = pytorch\n",
+    "        \n",
+    "    def combine_files(self, r_file: Path, g_dir, b_dir,nir_dir):\n",
+    "        \n",
+    "        files = {'red': r_file, \n",
+    "                 'green':g_dir/r_file.name.replace('red', 'green'),\n",
+    "                 'blue': b_dir/r_file.name.replace('red', 'blue'), \n",
+    "                 'nir': nir_dir/r_file.name.replace('red', 'nir')}\n",
+    "\n",
+    "        return files\n",
+    "                                       \n",
+    "    def __len__(self):\n",
+    "        \n",
+    "        return len(self.files)\n",
+    "     \n",
+    "    def open_as_array(self, idx, invert=False, include_nir=False):\n",
+    "\n",
+    "        raw_rgb = np.stack([np.array(Image.open(self.files[idx]['red'])),\n",
+    "                            np.array(Image.open(self.files[idx]['green'])),\n",
+    "                            np.array(Image.open(self.files[idx]['blue'])),\n",
+    "                           ], axis=2)\n",
+    "    \n",
+    "        #if include_nir:\n",
+    "         #   nir = np.expand_dims(np.array(Image.open(self.files[idx]['nir'])), 2)\n",
+    "          #  raw_rgb = np.concatenate([raw_rgb, nir], axis=2)\n",
+    "    \n",
+    "        if invert:\n",
+    "            raw_rgb = raw_rgb.transpose((2,0,1))\n",
+    "    \n",
+    "        # normalize\n",
+    "        return (raw_rgb / np.iinfo(raw_rgb.dtype).max)\n",
+    "    \n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        \n",
+    "        x = torch.tensor(self.open_as_array(idx, invert=self.pytorch, include_nir=True), dtype=torch.float32)\n",
+    "        \n",
+    "        return x\n",
+    "    \n",
+    "    def open_as_pil(self, idx):\n",
+    "        \n",
+    "        arr = 256*self.open_as_array(idx)\n",
+    "        \n",
+    "        return Image.fromarray(arr.astype(np.uint8), 'RGB')\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        s = 'Dataset class with {} files'.format(self.__len__())\n",
+    "\n",
+    "        return s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset class with 9201 files"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_path = Path('archive/38-Cloud_test')\n",
+    "data2 = CloudDatasetTest(base_path/'test_red', \n",
+    "                    base_path/'test_green', \n",
+    "                    base_path/'test_blue', \n",
+    "                    base_path/'test_nir')\n",
+    "data2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_ds = torch.utils.data.random_split(data2, (6000, 3201))\n",
+    "test_dl = DataLoader(test_ds, batch_size=12, shuffle=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -519,7 +649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
